--- a/resources/siteTemplate.css
+++ b/resources/siteTemplate.css
@@ -2,8 +2,8 @@ body {
         font-family: Arial, Helvetica, sans-serif; 
         background-color: #E5E4E2;
         position: relative;
-        padding-left: 5%;
-        padding-right: 5%;
+        padding-left: 29%;
+        padding-top: 25%;
         
       }
 footer{
