--- a/resources/siteTemplate.css
+++ b/resources/siteTemplate.css
@@ -1,7 +1,7 @@
 body {
         font-family: Arial, Helvetica, sans-serif; 
         background-color: #E5E4E2;
-        position: relative;
+        position: fixed;
         padding-left: 29%;
         padding-top: 25%;
         
