--- a/resources/siteTemplate.css
+++ b/resources/siteTemplate.css
@@ -1,7 +1,7 @@
 body {
         font-family: Arial, Helvetica, sans-serif; 
         background-color: #E5E4E2;
-        position: fixed;
+        position: absolute;
         left: 3%;
         top: 3%;
         
