--- a/projects/lab9/lab9.css
+++ b/projects/lab9/lab9.css
@@ -1,7 +1,9 @@
 /* Lab 9 CSS File */
   
 body {
-  font-family: Arial, Helvetica, sans-serif; 
+  font-family: Arial, 
+            Helvetica,  
+            sans-serif; 
 }
 #bodyBlock {
   width: 700px;
